Fixed each card layout, border radius, and gap between cards.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,12 +6,12 @@ body {
 
     background-color: $neutral-color3;
     height: 100vh;
+    padding: 30px 80px 0px;
 }
 
-article {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+main {
+    width: 80%;
+    margin: auto;
 }
 
 .title {
@@ -19,6 +19,7 @@ article {
     justify-content: center;
     margin: auto;
     color: $neutral-color1;
+    font-size: 2.375em;
     font-weight: 600;
     padding-bottom: .625rem;
 }
@@ -28,6 +29,7 @@ article {
     justify-content: center;
     margin: auto;
     color: $neutral-color1;
+    font-size: 2.375em;
     font-weight: 200;
 }
 
@@ -39,24 +41,54 @@ article {
     text-align: center;
 }
 
+article {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    height: 500px;
+}
+
+.card {
+    border-radius: .5em;
+    box-shadow: 0px 5px 10px 0px $neutral-color2;
+    margin: 1rem;
+    padding: 1.875rem;
+    font-size: .8em;
+    position: relative;
+}
+
 .card h2 {
     color: $neutral-color1;
+    font-size: 15px;
+    font-weight: 600;
+    margin-bottom: .5em;
+}
+
+.card i {
+    position: absolute;
+    bottom: 1.875rem;
+    right: 1.875rem;
 }
 
 .supervisor {
-    grid-row: 2;
+    border-top: 5px solid $primary-color2;
+    grid-row: 2 / 4;
 }
 
 .calculator {
-    grid-row: 2;
+    border-top: 5px solid $primary-color4;
+    grid-row: 2 / 4;
     grid-column: 3;
 }
 
 .team-builder {
+    border-top: 5px solid $primary-color1;
     grid-column: 2;
+    grid-row: 1 / 3;
 }
 
 .karma {
+    border-top: 5px solid $primary-color3;
     grid-column: 2;
-    grid-row: 3;
+    grid-row: 3 / 5;
 }
